--- a/book/math_foundations/labs/probability-basics.ipynb
+++ b/book/math_foundations/labs/probability-basics.ipynb
@@ -6561,7 +6561,7 @@
    "metadata": {},
    "source": [
     "## ✍️\n",
-    "Voor een standaard normale verdeling $N(0, 1)$, bereken:\n",
+    "Voor een standaard normale verdeling $\\mathcal{N}(0, 1^2)$, bereken:\n",
     "1. $P(x \\leq 0)$\n",
     "2. $P(-1 \\leq x \\leq 1)$\n",
     "3. $P(x > 2)$"
@@ -14540,7 +14540,7 @@
     "Bij ML Principles zagen we reeds een illustratie van de _{ref}`Law of Large Numbers <target-large-numbers>`_.\n",
     "\n",
     "## ✍️\n",
-    "Trek steekproeven van verschillende groottes uit een uniforme verdeling $U(0, 10)$ en bereken het steekproefgemiddelde. Toon aan dat het gemiddelde naar de theoretische verwachtingswaarde convergeert naarmate de steekproef groeit."
+    "Trek steekproeven van verschillende groottes uit een uniforme verdeling $\\mathcal{U}(0, 10)$ en bereken het steekproefgemiddelde. Toon aan dat het gemiddelde naar de theoretische verwachtingswaarde convergeert naarmate de steekproef groeit."
    ]
   },
   {
