--- a/book/math_foundations/labs/probability-joint.ipynb
+++ b/book/math_foundations/labs/probability-joint.ipynb
@@ -18,12 +18,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7c1ccf28",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import pandas as pd\n",
+    "import plotly.express as px\n",
+    "import plotly.graph_objects as go\n",
+    "from plotly.subplots import make_subplots\n",
+    "from scipy import stats\n",
     "\n",
     "# Set random seed\n",
     "rng = np.random.default_rng(42)"
@@ -56,11 +61,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d3689cdf",
+   "execution_count": 2,
+   "id": "96ca550c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Joint Probability Distribution P(x, y):\n",
+      "                   Te voet (y=1)  Auto (y=2)  Tram/Bus (y=3)  Trein (y=4)\n",
+      "Zonnig (x=1)                0.20        0.10            0.12         0.08\n",
+      "Bewolkt (x=2)               0.10        0.08            0.08         0.04\n",
+      "Regenachtig (x=3)           0.03        0.07            0.07         0.03\n",
+      "\n",
+      "Total probability: 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create joint probability table for weather and transportation mode\n",
+    "# X: Weather (1=Sunny, 2=Cloudy, 3=Rainy)\n",
+    "# Y: Transportation (1=Walking, 2=Car, 3=Tram/Bus, 4=Train)\n",
+    "\n",
+    "# Define the joint probability matrix\n",
+    "# People walk more when sunny, use car/bus more when rainy\n",
+    "joint_prob = np.array(\n",
+    "    [\n",
+    "        [0.20, 0.10, 0.12, 0.08],  # Sunny (P(x=1) = 0.50)\n",
+    "        [0.10, 0.08, 0.08, 0.04],  # Cloudy (P(x=2) = 0.30)\n",
+    "        [0.03, 0.07, 0.07, 0.03],  # Rainy (P(x=3) = 0.20)\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "weather_labels = [\"Zonnig\", \"Bewolkt\", \"Regenachtig\"]\n",
+    "transport_labels = [\"Te voet\", \"Auto\", \"Tram/Bus\", \"Trein\"]\n",
+    "\n",
+    "# Create DataFrame for better visualization\n",
+    "joint_df = pd.DataFrame(\n",
+    "    joint_prob,\n",
+    "    index=[f\"{w} (x={i + 1})\" for i, w in enumerate(weather_labels)],\n",
+    "    columns=[f\"{t} (y={j + 1})\" for j, t in enumerate(transport_labels)],\n",
+    ")\n",
+    "\n",
+    "print(\"Joint Probability Distribution P(x, y):\")\n",
+    "print(joint_df)\n",
+    "print(f\"\\nTotal probability: {joint_prob.sum():.1f}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -76,11 +123,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7178f59e",
+   "execution_count": 3,
+   "id": "4beb7eca",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. P(x=1, y=1) = P(Zonnig, Te voet) = 0.200\n",
+      "2. P(x=3, y∈{2,3}) = P(Regenachtig, Auto of Tram/Bus) = 0.140\n",
+      "3. P(y=4) = P(Trein) = 0.150\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1. P(x=1, y=1) - Sunny and Walking\n",
+    "p_sunny_walking = joint_prob[0, 0]\n",
+    "print(f\"1. P(x=1, y=1) = P(Zonnig, Te voet) = {p_sunny_walking:.3f}\")\n",
+    "\n",
+    "# 2. P(x=3, y∈{2,3}) - Rainy and (Car OR Tram/Bus)\n",
+    "p_rainy_car_or_bus = joint_prob[2, 1] + joint_prob[2, 2]\n",
+    "print(f\"2. P(x=3, y∈{{2,3}}) = P(Regenachtig, Auto of Tram/Bus) = {p_rainy_car_or_bus:.3f}\")\n",
+    "\n",
+    "# 3. P(y=4) - Train (regardless of weather) - this is marginal probability\n",
+    "p_train = joint_prob[:, 3].sum()\n",
+    "print(f\"3. P(y=4) = P(Trein) = {p_train:.3f}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -99,11 +168,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a4ecaae4",
+   "execution_count": 4,
+   "id": "abdd2966",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Marginal distribution P(x) - Weertype:\n",
+      "  P(x=1) = P(Zonnig) = 0.500\n",
+      "  P(x=2) = P(Bewolkt) = 0.300\n",
+      "  P(x=3) = P(Regenachtig) = 0.200\n",
+      "\n",
+      "Marginal distribution P(y) - Verplaatsingsmodus:\n",
+      "  P(y=1) = P(Te voet) = 0.330\n",
+      "  P(y=2) = P(Auto) = 0.250\n",
+      "  P(y=3) = P(Tram/Bus) = 0.270\n",
+      "  P(y=4) = P(Trein) = 0.150\n",
+      "\n",
+      "Verification:\n",
+      "  Sum of P(x): 1.0\n",
+      "  Sum of P(y): 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate marginal distributions\n",
+    "marginal_x = joint_prob.sum(axis=1)  # sum over y (columns) - weather distribution\n",
+    "marginal_y = joint_prob.sum(axis=0)  # sum over x (rows) - transport distribution\n",
+    "\n",
+    "print(\"Marginal distribution P(x) - Weertype:\")\n",
+    "for i, (weather, prob) in enumerate(zip(weather_labels, marginal_x, strict=False), start=1):\n",
+    "    print(f\"  P(x={i}) = P({weather}) = {prob:.3f}\")\n",
+    "\n",
+    "print(\"\\nMarginal distribution P(y) - Verplaatsingsmodus:\")\n",
+    "for j, (transport, prob) in enumerate(zip(transport_labels, marginal_y, strict=False), start=1):\n",
+    "    print(f\"  P(y={j}) = P({transport}) = {prob:.3f}\")\n",
+    "\n",
+    "print(f\"\\nVerification:\")\n",
+    "print(f\"  Sum of P(x): {marginal_x.sum():.1f}\")\n",
+    "print(f\"  Sum of P(y): {marginal_y.sum():.1f}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -122,11 +228,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3e09ddb8",
+   "execution_count": 5,
+   "id": "258424d5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Conditional distribution P(y | x=[2, 3]) - Verplaatsingsmodus gegeven Bewolkt of Regenachtig weer:\n",
+      "  P(y=1 | x=[2, 3]) = P(Te voet | Bewolkt of Regen) = 0.2600\n",
+      "  P(y=2 | x=[2, 3]) = P(Auto | Bewolkt of Regen) = 0.3000\n",
+      "  P(y=3 | x=[2, 3]) = P(Tram/Bus | Bewolkt of Regen) = 0.3000\n",
+      "  P(y=4 | x=[2, 3]) = P(Trein | Bewolkt of Regen) = 0.1400\n",
+      "\n",
+      "Verification: sum = 1.0\n",
+      "\n",
+      "Comparison with marginal P(y):\n",
+      "  P(y|x=[2, 3]) ≈ P(y)? False\n",
+      "  → Variables are dependent!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Conditional distribution P(y | x in {2, 3}) - Transport mode given Cloudy or Rainy weather\n",
+    "x_values = [2, 3]  # Cloudy or Rainy\n",
+    "x_indices = [x - 1 for x in x_values]\n",
+    "\n",
+    "# P(y | x in {2, 3}) = P(x in {2, 3}, y) / P(x in {2, 3})\n",
+    "conditional_y_given_cloudy_or_rainy = (\n",
+    "    joint_prob[x_indices, :].sum(axis=0) / marginal_x[x_indices].sum()\n",
+    ")\n",
+    "\n",
+    "print(\n",
+    "    f\"Conditional distribution P(y | x={x_values}) - Verplaatsingsmodus gegeven Bewolkt of Regenachtig weer:\"\n",
+    ")\n",
+    "for j, (transport, prob) in enumerate(\n",
+    "    zip(transport_labels, conditional_y_given_cloudy_or_rainy, strict=False), start=1\n",
+    "):\n",
+    "    print(f\"  P(y={j} | x={x_values}) = P({transport} | Bewolkt of Regen) = {prob:.4f}\")\n",
+    "\n",
+    "print(f\"\\nVerification: sum = {conditional_y_given_cloudy_or_rainy.sum():.1f}\")\n",
+    "\n",
+    "# Compare with marginal - they should be different (variables are dependent)\n",
+    "print(\"\\nComparison with marginal P(y):\")\n",
+    "print(f\"  P(y|x={x_values}) ≈ P(y)? {np.allclose(conditional_y_given_cloudy_or_rainy, marginal_y)}\")\n",
+    "print(\n",
+    "    f\"  → Variables are {'independent' if np.allclose(conditional_y_given_cloudy_or_rainy, marginal_y) else 'dependent'}!\"\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
