--- a/book/math_foundations/linear_regression/multiple.ipynb
+++ b/book/math_foundations/linear_regression/multiple.ipynb
@@ -44,7 +44,7 @@
     "b_3 &= 0.05 \\cr\n",
     "b_4 &= -0.003 \\cr\n",
     "\\cr\n",
-    "e_i &\\sim N(0, 0.30) \\cr\n",
+    "e_i &\\sim \\mathcal{N}(0, 0.30^2) \\cr\n",
     "\\cr\n",
     "x_{i,2} &\\sim U(3, 25) \\cr\n",
     "x_{i,3} &\\sim U(20, 70) \\cr\n",
