--- a/book/math_foundations/prob/testing.ipynb
+++ b/book/math_foundations/prob/testing.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "## Basisconcept\n",
     "\n",
-    "Bij hypothesis testing vergelijken we twee veronderstellingen of _hypotheses_:\n",
+    "Bij _hypothesis testing_ vergelijken we twee veronderstellingen of _hypotheses_:\n",
     "(target-hypothesis)=\n",
     "- **Nulhypothese** ($H_0$): De standaardaanname, meestal de meest conservatieve veronderstelling: de data zijn {u}`consistent` met een veronderstelde kansverdeling.\n",
     "- **Alternatieve hypothese** ($H_1$ of $H_a$): De hypothese die we willen testen, meestal dat de data zijn {u}`niet-consistent` met een veronderstelde kansverdeling.\n",
@@ -36,7 +36,7 @@
     "(target-p-value)=\n",
     "De **p-waarde** is de kans om de waargenomen data en extremere waarden te observeren, gegeven dat de nulhypothese waar is. Een lage p-waarde ($< 0.05$) suggereert dat de data onwaarschijnlijk is onder $H_0$, wat leidt tot verwerping van $H_0$.  \n",
     "  \n",
-    "Veronderstel dat onder de nulhypothese de data een standaard normale verdeling $\\mathcal{N}(0, 1)$ volgt. Als we een nieuwe steekproef met gemiddelde $m = 2$ krijgen, dan is de p-waarde $P(m \\geq 2 \\mid H_0)$ - de kans om een waarde van $2$ of extremer te observeren als $H_0$ waar is."
+    "Veronderstel dat onder de nulhypothese een observatie afkomstig is van een standaard normale verdeling $\\mathcal{N}(0, 1^2)$. Als we een waarde van $2$ observeren, dan kunnen we de p-waarde $P(X \\geq 2 \\mid H_0)$ beschouwen - de kans om een waarde van $2$ of groter te observeren als $H_0$ waar is. Als we een waarde $-5$ observeren, dan kunnnen we de p-waarde $P(X \\leq -5 \\mid H_0)$ bekijken - de kans om een waarde van $-5$ of kleiner te observeren als $H_0$ waar is. We kunnen ook de p-waarde berekenen om een extremer verschil ten opzichte van het gemiddelde te observeren als $H_0$ waar is. Bijvoorbeeld $P(X \\leq -6 \\mid H_0) + P(X \\geq 6 \\mid H_0)$."
    ]
   },
   {
@@ -381,10 +381,10 @@
     "Er bestaan heel veel verschillende types statistische tests naargelang het soort data en de veronderstelde theoretische of populatieverdelingen.\n",
     "\n",
     "#### $z$-test\n",
-    "In de {u}`veronderstelling van normaal verdeelde data` kan bijvoorbeeld worden gekeken of het gemiddelde van een steekproef $m$ significant verschilt van een vooropgesteld populatiegemiddelde $\\mu$. Theoretisch is het zo dat als we het verschil $m-\\mu$ standaardiseren met de **standaardfout van het steekproefgemiddelde**, we een standaard normaalverdeling moeten bekomen.\n",
+    "In de {u}`veronderstelling van normaal verdeelde data` kan bijvoorbeeld worden gekeken of het {u}`gemiddelde van een steekproef` $m$ significant verschilt van een vooropgesteld populatiegemiddelde $\\mu$. Theoretisch is het zo dat als we het verschil $m-\\mu$ standaardiseren met de **standaardfout van het steekproefgemiddelde**, we een standaard normaalverdeling moeten bekomen.\n",
     "\n",
     "$$\n",
-    "Z = \\frac{m-\\mu}{\\sigma/\\sqrt{n}} \\sim \\mathcal{N}(0, 1)\n",
+    "Z = \\frac{m-\\mu}{\\sigma/\\sqrt{n}} \\sim \\mathcal{N}(0, 1^2)\n",
     "$$\n",
     "\n",
     "(target-standard-error-mean)=\n",
