--- a/book/math_foundations/linear_regression/grid.ipynb
+++ b/book/math_foundations/linear_regression/grid.ipynb
@@ -79,7 +79,7 @@
                 "De ruis simuleren we door steekproeven te nemen uit een normale (_Gauss_) verdeling met gemiddelde 0 en standaardafwijking $\\sigma=0.30$[^prob]:\n",
                 "\n",
                 "$$\n",
-                "e_i \\sim \\mathcal{N}(0, 0.30)\n",
+                "e_i \\sim \\mathcal{N}(0, 0.30^2)\n",
                 "$$\n",
                 "  \n",
                 "(naming-target)=\n",
@@ -94,7 +94,7 @@
                 "x_i \\sim \\mathcal{U}(3, 25)\n",
                 "$$\n",
                 "\n",
-                "[^prob]: We komen hierop terug in de secties over probabiliteit. "
+                "[^prob]: We komen hierop terug in de secties over probabiliteit. De parameter voor de normaalverdeling is de gekwadrateerde standaardafwijking of de variantie $\\sigma^2$. "
             ]
         },
         {
