--- a/book/math_foundations/labs/probability-likelihood.ipynb
+++ b/book/math_foundations/labs/probability-likelihood.ipynb
@@ -5,17 +5,9 @@
    "id": "6de7d4b2",
    "metadata": {},
    "source": [
-    "# Likelihood en Model Onzekerheid\n",
+    "# Likelihood\n",
     "\n",
-    "In dit labo leer je hoe je maximum likelihood schatting toepast, onzekerheid kwantificeert via betrouwbaarheidsintervallen en predictie-intervallen, en modellen vergelijkt met de likelihood ratio test.\n",
-    "\n",
-    "**Leerdoelen:**\n",
-    "- Maximum likelihood schatting toepassen op lineaire regressie\n",
-    "- Standaardfouten en betrouwbaarheidsintervallen berekenen voor parameters\n",
-    "- Predictie-intervallen construeren voor nieuwe observaties\n",
-    "- Het verschil begrijpen tussen betrouwbaarheids- en predictie-intervallen\n",
-    "- Likelihood ratio tests gebruiken om modellen te vergelijken\n",
-    "- Fisher informatie interpreteren"
+    "In dit labo leer je hoe je maximum likelihood schatting toepast, onzekerheid kwantificeert via betrouwbaarheidsintervallen en predictie-intervallen, en modellen vergelijkt met de likelihood ratio test."
    ]
   },
   {
