--- a/book/ml_principles/labs/imgrec_taco_train.ipynb
+++ b/book/ml_principles/labs/imgrec_taco_train.ipynb
@@ -2,6 +2,13 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# TACO dataset: Model"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "_oEzBLzSP5Mw"
       },
@@ -26,7 +33,7 @@
         "id": "TRYkiFPtP5M3"
       },
       "source": [
-        "# Colab setup\n",
+        "## Colab setup\n",
         "- Als je de notebook voor het eerst opent op Colab, kies je in het menu rechts bovenaan `Connect > Change runtime type`: `Python 3` en `T4 GPU`.\n",
         "- Pas nadat de GPU Runtime is opgestart ga je verder met onderstaande installatie van het [ultralitics](https://github.com/ultralytics/ultralytics) package.\n",
         "- ⚠️ Bij deze waarschuwing `Warning: This notebook was not authored by Google` selecteer je `Run anyway`."
@@ -102,7 +109,7 @@
         "id": "qgzoP3-oP5NB"
       },
       "source": [
-        "# Dataset"
+        "## Dataset"
       ]
     },
     {
@@ -173,7 +180,7 @@
         "id": "W5sz5f38P5NJ"
       },
       "source": [
-        "# Training (hyper) Parameters"
+        "## Training (hyper) Parameters"
       ]
     },
     {
@@ -207,7 +214,7 @@
         "id": "6MoGAfPIP5NL"
       },
       "source": [
-        "# Model Training"
+        "## Model Training"
       ]
     },
     {
@@ -311,7 +318,7 @@
         "id": "1-3051sNP5NO"
       },
       "source": [
-        "# log file testing"
+        "## log file testing"
       ]
     },
     {
@@ -338,7 +345,7 @@
         "id": "BfNc0juOP5NQ"
       },
       "source": [
-        "# Graphs"
+        "## Graphs"
       ]
     },
     {
@@ -420,7 +427,7 @@
         "id": "AfZacuXUP5NQ"
       },
       "source": [
-        "# Validation results"
+        "## Validation results"
       ]
     },
     {
@@ -458,7 +465,7 @@
         "id": "rEQBuhQYP5NT"
       },
       "source": [
-        "# Validation Metrics plot"
+        "## Validation Metrics plot"
       ]
     },
     {
@@ -493,7 +500,7 @@
         "id": "8qUFoOmXP5NU"
       },
       "source": [
-        "# Testing"
+        "## Testing"
       ]
     },
     {
@@ -673,7 +680,7 @@
         "    axes[1].set_title(\"\\n\".join(actual_labels_names), fontsize=14, wrap=True)\n",
         "    axes[1].axis(\"off\")\n",
         "\n",
-        "    plt.show()\n"
+        "    plt.show()"
       ]
     }
   ],
