--- a/book/ml_principles/labs/imggen_butterfly.ipynb
+++ b/book/ml_principles/labs/imggen_butterfly.ipynb
@@ -10,7 +10,12 @@
         "\n",
         "Navigeer naar deze notebook op GitHub: [https://github.com/ap-mdi-it/ml-courses/blob/main/book/ml_principles/labs/imggen_butterfly](https://github.com/ap-mdi-it/ml-courses/blob/main/book/ml_principles/labs/imggen_butterfly)  \n",
         "  \n",
-        "Via bovenstaande link kan je deze notebook openen in Google Colaboratory. In die omgeving kunnen we gebruik maken van gratis quota voor GPUs (en TPUs). GPU acceleratie is hier sterk aanbevolen voor zowel model training als model inference."
+        "Via bovenstaande link kan je deze notebook openen in Google Colaboratory. In die omgeving kunnen we gebruik maken van gratis quota voor GPUs (en TPUs). GPU acceleratie is hier sterk aanbevolen voor zowel model training als model inference.\n",
+        "\n",
+        "## Colab setup\n",
+        "- Als je de notebook voor het eerst opent op Colab, kies je in het menu rechts bovenaan `Connect > Change runtime type`: `Python 3` en `T4 GPU`.\n",
+        "- Pas nadat de GPU Runtime is opgestart ga je verder met onderstaande installatie.\n",
+        "- ⚠️ Bij deze waarschuwing `Warning: This notebook was not authored by Google` selecteer je `Run anyway`."
       ]
     },
     {
