--- a/book/ml_principles/labs/nlp_nanogpt.ipynb
+++ b/book/ml_principles/labs/nlp_nanogpt.ipynb
@@ -5,6 +5,8 @@
    "id": "4b9432bb",
    "metadata": {},
    "source": [
+    "# ML voor taalverwerking\n",
+    "\n",
     "[![](https://img.shields.io/static/v1?message=Open%20in%20Colab&logo=googlecolab&labelColor=grey&color=yellow&logoColor=white&label=%20&style=flat-square)](https://colab.research.google.com/github/ap-mdi-it/ml-courses/blob/main/book/ml_principles/labs/nlp_nanogpt.ipynb)"
    ]
   },
@@ -23,7 +25,7 @@
    "id": "e6d91d0d",
    "metadata": {},
    "source": [
-    "# Colab setup\n",
+    "## Colab setup\n",
     "- Als je de notebook voor het eerst opent op Colab, kies je in het menu rechts bovenaan `Connect > Change runtime type`: `Python 3` en `T4 GPU`.\n",
     "- Pas nadat de GPU Runtime is opgestart ga je verder met onderstaande installatie.\n",
     "- ⚠️ Bij deze waarschuwing `Warning: This notebook was not authored by Google` selecteer je `Run anyway`."
