after math foundations lesson

--- a/book/math_foundations/labs/probability-testing.ipynb
+++ b/book/math_foundations/labs/probability-testing.ipynb
@@ -71,7 +71,7 @@
     "- **Controlegroep** (placebo): [120, 118, 122, 125, 119, 121, 123, 120, 124, 122, 121, 119, 123, 120, 122]\n",
     "- **Behandelingsgroep** (medicijn): [115, 112, 118, 114, 116, 113, 115, 117, 114, 116, 115, 113, 112, 118, 116]\n",
     "\n",
-    "Test of het medicijn de bloeddruk significant verlaagt (eenzijdige test, α = 0.05). Doe dit zowel via manuele berekening van de teststatistiek als via `scipy.stats.ttest_ind`."
+    "Test of het medicijn de bloeddruk significant verlaagt (eenzijdige test, α = 0.05) - in de veronderstelling van een gezamenlijke sample variantie. Doe dit zowel via manuele berekening van de teststatistiek als via `scipy.stats.ttest_ind`."
    ]
   },
   {
