imggen lab ready

--- a/book/ml_principles/labs/imggen_butterfly.ipynb
+++ b/book/ml_principles/labs/imggen_butterfly.ipynb
@@ -10,12 +10,7 @@
         "\n",
         "Navigeer naar deze notebook op GitHub: [https://github.com/ap-mdi-it/ml-courses/blob/main/book/ml_principles/labs/imggen_butterfly](https://github.com/ap-mdi-it/ml-courses/blob/main/book/ml_principles/labs/imggen_butterfly)  \n",
         "  \n",
-        "Via bovenstaande link kan je deze notebook openen in Google Colaboratory. In die omgeving kunnen we gebruik maken van gratis quota voor GPUs (en TPUs). GPU acceleratie is hier sterk aanbevolen voor zowel model training als model inference.\n",
-        "\n",
-        "## Colab setup\n",
-        "- Als je de notebook voor het eerst opent op Colab, kies je in het menu rechts bovenaan `Connect > Change runtime type`: `Python 3` en `T4 GPU`.\n",
-        "- Pas nadat de GPU Runtime is opgestart ga je verder met onderstaande installatie.\n",
-        "- ⚠️ Bij deze waarschuwing `Warning: This notebook was not authored by Google` selecteer je `Run anyway`."
+        "Via bovenstaande link kan je deze notebook openen in Google Colaboratory. In die omgeving kunnen we gebruik maken van gratis quota voor GPUs (en TPUs). GPU acceleratie is hier sterk aanbevolen voor zowel model training als model inference."
       ]
     },
     {
@@ -26,8 +21,15 @@
       },
       "outputs": [],
       "source": [
+        "import numpy as np\n",
         "import torch\n",
+        "import torch.nn.functional as F\n",
+        "import torchvision\n",
         "from datasets import load_dataset\n",
+        "from diffusers import DDPMScheduler, UNet2DModel\n",
+        "from matplotlib import pyplot as plt\n",
+        "from PIL import Image\n",
+        "from torchvision import transforms\n",
         "\n",
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
       ]
@@ -37,6 +39,7 @@
       "metadata": {},
       "source": [
         "## Data\n",
+        "\n",
         "In dit labo trainen we een (mini) diffusionmodel met een dataset van foto's van vlinders die afkomstig is van het Amerikaanse [Smithsonian Institute](https://collections.si.edu/search/results.htm?q=butterfly&view=list&fq=online_media_type%3A%22Images%22&fq=topic%3A%22Insects%22&fq=data_source%3A%22NMNH+-+Entomology+Dept.%22&media.CC0=true&dsort=title&start=0).\n",
         "\n",
         "De dataset is beschikbaar op [Hugging Face](https://huggingface.co/datasets/huggan/smithsonian_butterflies_subset/viewer?views[]=train) en kan van daar geladen worden via het [`datasets`](https://huggingface.co/docs/datasets/en/index) package."
@@ -102,6 +105,382 @@
       "outputs": [],
       "source": [
         "dataset = load_dataset(\"huggan/smithsonian_butterflies_subset\", split=\"train\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Data preprocessing\n",
+        "We transformeren de afbeeldingen naar een uniform formaat van 32x32 pixels, voeren data augmentatie uit (horizontaal flippen) en normaliseren de pixelwaarden naar het bereik (-1, 1)."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "HbVjIEzdSeZd"
+      },
+      "outputs": [],
+      "source": [
+        "image_size = 32\n",
+        "batch_size = 32\n",
+        "\n",
+        "preprocess = transforms.Compose(\n",
+        "    [\n",
+        "        transforms.Resize((image_size, image_size)),  # Resize\n",
+        "        transforms.RandomHorizontalFlip(),  # Randomly flip (data augmentation)\n",
+        "        transforms.ToTensor(),  # Convert to tensor (0, 1)\n",
+        "        transforms.Normalize([0.5], [0.5]),  # Map to (-1, 1)\n",
+        "    ]\n",
+        ")\n",
+        "\n",
+        "\n",
+        "def transform(examples):\n",
+        "    images = [preprocess(image.convert(\"RGB\")) for image in examples[\"image\"]]\n",
+        "    return {\"images\": images}\n",
+        "\n",
+        "\n",
+        "dataset.set_transform(transform)\n",
+        "\n",
+        "# Create a dataloader from the dataset to serve up the transformed images in batches\n",
+        "train_dataloader = torch.utils.data.DataLoader(dataset, batch_size=batch_size, shuffle=True)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Visualisatie functie\n",
+        "Een helper functie om batches van afbeeldingen te visualiseren als een grid."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "7U5Z6q2HTEnG"
+      },
+      "outputs": [],
+      "source": [
+        "def show_images(x):\n",
+        "    \"\"\"Given a batch of images x, make a grid and convert to PIL.\"\"\"\n",
+        "    x = x * 0.5 + 0.5  # Map from (-1, 1) back to (0, 1)\n",
+        "    grid = torchvision.utils.make_grid(x)\n",
+        "    grid_im = grid.detach().cpu().permute(1, 2, 0).clip(0, 1) * 255\n",
+        "    grid_im = Image.fromarray(np.array(grid_im).astype(np.uint8))\n",
+        "    return grid_im"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Voorbeeld afbeeldingen\n",
+        "We visualiseren enkele voorbeelden uit de training dataset."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 99
+        },
+        "id": "DOmF-oX0S0nM",
+        "outputId": "1a99d89f-59c8-484f-a90f-5b07279391cd"
+      },
+      "outputs": [],
+      "source": [
+        "xb = next(iter(train_dataloader))[\"images\"].to(device)[:8]\n",
+        "print(\"X shape:\", xb.shape)\n",
+        "show_images(xb).resize((8 * 64, 64), resample=Image.NEAREST)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Noise scheduler\n",
+        "De DDPM (Denoising Diffusion Probabilistic Models) scheduler bepaalt hoe ruis gradueel wordt toegevoegd tijdens training en verwijderd tijdens generatie. We gebruiken 1000 timesteps."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "QHEg3BB9Tbmr"
+      },
+      "outputs": [],
+      "source": [
+        "noise_scheduler = DDPMScheduler(num_train_timesteps=1000)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Noise schedule visualisatie\n",
+        "Deze grafiek toont hoe het signaal (originele afbeelding) en de ruis zich verhouden over de verschillende timesteps. Aan het einde is de afbeelding bijna volledig ruis."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 430
+        },
+        "id": "_kMT37DpToXc",
+        "outputId": "cb14d827-839b-4c8e-b6e7-83b10da05bfa"
+      },
+      "outputs": [],
+      "source": [
+        "plt.plot(noise_scheduler.alphas_cumprod.cpu() ** 0.5, label=r\"${\\sqrt{\\bar{\\alpha}_t}}$\")\n",
+        "plt.plot((1 - noise_scheduler.alphas_cumprod.cpu()) ** 0.5, label=r\"$\\sqrt{(1 - \\bar{\\alpha}_t)}$\")\n",
+        "plt.legend(fontsize=\"x-large\");"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Alternatieve noise schedules\n",
+        "Deze cel toont andere mogelijke configuraties voor de noise scheduler."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "vDL7NoDdn854"
+      },
+      "outputs": [],
+      "source": [
+        "# One with too little noise added:\n",
+        "# noise_scheduler = DDPMScheduler(num_train_timesteps=1000, beta_start=0.001, beta_end=0.004)\n",
+        "# The 'cosine' schedule, which may be better for small image sizes:\n",
+        "# noise_scheduler = DDPMScheduler(num_train_timesteps=1000, beta_schedule='squaredcos_cap_v2')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Ruis toevoegen aan afbeeldingen\n",
+        "We demonstreren het forward diffusion proces: afbeeldingen krijgen steeds meer ruis naarmate de timestep hoger wordt."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 99
+        },
+        "id": "FTiwtKnhn_C_",
+        "outputId": "aa4c37ef-8829-4345-f2de-47154d653c7e"
+      },
+      "outputs": [],
+      "source": [
+        "timesteps = torch.linspace(0, 999, 8).long().to(device)\n",
+        "noise = torch.randn_like(xb)\n",
+        "noisy_xb = noise_scheduler.add_noise(xb, noise, timesteps)\n",
+        "print(\"Noisy X shape\", noisy_xb.shape)\n",
+        "show_images(noisy_xb).resize((8 * 64, 64), resample=Image.NEAREST)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## UNet model\n",
+        "We definiëren een UNet architectuur met attention layers. Dit model leert om de toegevoegde ruis te voorspellen en te verwijderen."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "-cCzHiNRoBlU"
+      },
+      "outputs": [],
+      "source": [
+        "# Create a model\n",
+        "model = UNet2DModel(\n",
+        "    sample_size=image_size,  # the target image resolution\n",
+        "    in_channels=3,  # the number of input channels, 3 for RGB images\n",
+        "    out_channels=3,  # the number of output channels\n",
+        "    layers_per_block=2,  # how many ResNet layers to use per UNet block\n",
+        "    block_out_channels=(64, 128, 128, 256),  # More channels -> more parameters\n",
+        "    down_block_types=(\n",
+        "        \"DownBlock2D\",  # a regular ResNet downsampling block\n",
+        "        \"DownBlock2D\",\n",
+        "        \"AttnDownBlock2D\",  # a ResNet downsampling block with spatial self-attention\n",
+        "        \"AttnDownBlock2D\",\n",
+        "    ),\n",
+        "    up_block_types=(\n",
+        "        \"AttnUpBlock2D\",\n",
+        "        \"AttnUpBlock2D\",  # a ResNet upsampling block with spatial self-attention\n",
+        "        \"UpBlock2D\",\n",
+        "        \"UpBlock2D\",  # a regular ResNet upsampling block\n",
+        "    ),\n",
+        ")\n",
+        "model.to(device);"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Model test\n",
+        "We testen of het model de juiste output shape produceert voordat we beginnen met trainen."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1E8Yy7vjo7CE",
+        "outputId": "8aa9a326-8515-41b9-821a-8d5c185cab52"
+      },
+      "outputs": [],
+      "source": [
+        "with torch.no_grad():\n",
+        "    model_prediction = model(noisy_xb, timesteps).sample\n",
+        "model_prediction.shape"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Training\n",
+        "Het model wordt getraind om de toegevoegde ruis te voorspellen. Voor elke batch:\n",
+        "1. Voeg willekeurige ruis toe aan schone afbeeldingen\n",
+        "2. Laat het model de ruis voorspellen\n",
+        "3. Bereken het verschil (MSE loss) tussen echte en voorspelde ruis\n",
+        "4. Update de model parameters"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9ZJB1FZIpBLz",
+        "outputId": "2669f486-5e94-4e80-ac8b-2f4b9b7587f0"
+      },
+      "outputs": [],
+      "source": [
+        "# Set the noise scheduler\n",
+        "noise_scheduler = DDPMScheduler(num_train_timesteps=1000, beta_schedule=\"squaredcos_cap_v2\")\n",
+        "\n",
+        "# Training loop\n",
+        "optimizer = torch.optim.AdamW(model.parameters(), lr=4e-4)\n",
+        "\n",
+        "losses = []\n",
+        "\n",
+        "for epoch in range(30):\n",
+        "    for step, batch in enumerate(train_dataloader):\n",
+        "        clean_images = batch[\"images\"].to(device)\n",
+        "        # Sample noise to add to the images\n",
+        "        noise = torch.randn(clean_images.shape).to(clean_images.device)\n",
+        "        bs = clean_images.shape[0]\n",
+        "\n",
+        "        # Sample a random timestep for each image\n",
+        "        timesteps = torch.randint(\n",
+        "            0, noise_scheduler.num_train_timesteps, (bs,), device=clean_images.device\n",
+        "        ).long()\n",
+        "\n",
+        "        # Add noise to the clean images according to the noise magnitude at each timestep\n",
+        "        noisy_images = noise_scheduler.add_noise(clean_images, noise, timesteps)\n",
+        "\n",
+        "        # Get the model prediction\n",
+        "        noise_pred = model(noisy_images, timesteps, return_dict=False)[0]\n",
+        "\n",
+        "        # Calculate the loss\n",
+        "        loss = F.mse_loss(noise_pred, noise)\n",
+        "        loss.backward(loss)\n",
+        "        losses.append(loss.item())\n",
+        "\n",
+        "        # Update the model parameters with the optimizer\n",
+        "        optimizer.step()\n",
+        "        optimizer.zero_grad()\n",
+        "\n",
+        "    if (epoch + 1) % 5 == 0:\n",
+        "        loss_last_epoch = sum(losses[-len(train_dataloader) :]) / len(train_dataloader)\n",
+        "        print(f\"Epoch:{epoch + 1}, loss: {loss_last_epoch}\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Training verloop\n",
+        "Visualisatie van de loss over tijd. Een dalende trend toont dat het model leert."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 369
+        },
+        "id": "rEJ1aGeRpFCN",
+        "outputId": "05706622-2fe2-4bec-de86-1ffc85ad8489"
+      },
+      "outputs": [],
+      "source": [
+        "fig, axs = plt.subplots(1, 2, figsize=(12, 4))\n",
+        "axs[0].plot(losses)\n",
+        "axs[1].plot(np.log(losses))\n",
+        "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Generatie\n",
+        "Nu gebruiken we het getrainde model om nieuwe vlinder afbeeldingen te genereren. We starten met pure ruis en verwijderen stap voor stap de ruis volgens het reverse diffusion proces."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
+        "id": "rVEpBkIHpt1y",
+        "outputId": "92e82d33-2351-4050-cb35-ba3d15c4dd6f"
+      },
+      "outputs": [],
+      "source": [
+        "# Random starting point (8 random images):\n",
+        "sample = torch.randn(8, 3, 32, 32).to(device)\n",
+        "\n",
+        "for i, t in enumerate(noise_scheduler.timesteps):\n",
+        "    # Get model pred\n",
+        "    with torch.no_grad():\n",
+        "        residual = model(sample, t).sample\n",
+        "\n",
+        "    # Update sample with step\n",
+        "    sample = noise_scheduler.step(residual, t, sample).prev_sample\n",
+        "\n",
+        "show_images(sample)"
       ]
     }
   ],
